2-Machine preparations